--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.gmail.danylooliinyk.collectcirclesgame.FrameLayoutImageViewSelfDelete
+<com.gmail.danylooliinyk.collectcatsgame.view.CatViewContainer
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/flGameScene"
